--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,9 +13,7 @@ phases:
 
   post_build:
     commands:
-      - echo "Iniciando servidor web"
-      - systemctl start httpd
-      - systemctl enable httpd
+      - echo "Finalizando construccion"
 
 artifacts:
   files:
